<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity"
    android:background="@color/colorPrimary">
    
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/enterDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="#ffffff"
        android:layout_below="@id/appLogo"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterDescription"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:background="#ffffff"
        android:maxLength="10"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobileNumber"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:hint="@string/email_address"
        android:background="#ffffff"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailAddress"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"/>

</RelativeLayout>