<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:src="@drawable/app_logo"/>

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_baseline_smartphone_24"
        android:drawablePadding="5dp"
        android:background="#ffffff"
        android:maxLength="10"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobileNumber"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:background="#ffffff"
        android:maxLines="1"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:layout_below="@id/password"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/accountSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textSize="16sp"
        android:padding="6dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>

</RelativeLayout>